Bug 405899, autoscroll causes window to close, r+sr=roc